# redact-pdf

./: .gitignore  CLAUDE.md  README.md  build.bat  deploy_gpo.bat  gui-macos.spec  gui.spec  pyproject.toml  redact_pdf.py  requirements.txt
.github/workflows/: build.yml
tests/: test_redact.py
